--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "node -e \"process.env.NODE_ENV='production'\" && node dist/index.js",
+
+    "start": "node server/index.js",
+    "build": "vite build"
+
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
